--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,13 @@ h4 {
     color: white;
 }
 
+h1 {
+  font-size: 3.5em;
+  font-weight: 700;
+  line-height: 0.8em;
+  font-family: 'Work Sans', sans-serif;
+}
+
 ul {
     margin-top: 0px;
 }
@@ -56,7 +63,7 @@ a {
     display: flex;
     /*background-color: rgba(35, 35, 39, 0.5);*/
     height: 90px;
-    padding: 20px;
+    padding: 20px 0px 20px 20px;
 }
 
 
@@ -82,8 +89,14 @@ main img {
 .main-nav a {
     margin-left: 25px;
     padding-right: 25px;
-    border-right: 1px solid white;
+    /*border-right: 1px solid white;*/
     text-decoration: none;
+}
+
+.main-nav div {
+  width: 1px;
+  height: 20px;
+  background-color: white;
 }
 
 
@@ -112,6 +125,7 @@ main img {
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
+  color: yellow;
 }
 
 /*ROTATE ANIMATION*/
@@ -135,6 +149,13 @@ main img {
   transform: rotate(45deg);
 }
 
+/*MAIN*/
+
+.headline {
+  width: 200px;
+  margin-left: 20px;
+}
+
 /*FOOTER*/
 
 footer {
@@ -145,7 +166,7 @@ footer {
 
 footer h4{
   position: relative;
-  border-top: 1px grey solid;
+  border-top: 1px rgba(255, 255, 255, 0.5) solid;
   padding-top: 5px;
   margin-left: 20px; /* added by Pedro */
 }
@@ -156,7 +177,7 @@ footer h4:before {
     font-style: normal;
     font-weight: normal;
     text-decoration: inherit;
-    color: #fff;
+    color: yellow;
     font-size: 14px;
     padding-right: 0.5em;
     position: absolute;
@@ -186,7 +207,7 @@ footer h4:before {
     background-color: rgba(0, 0, 0, 0.5);
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 .column1 {
