--- a/styles/gallerystyles.css
+++ b/styles/gallerystyles.css
@@ -1,4 +1,4 @@
-/*UTILITY*/
+        /*UTILITY*/
 
 * {
     box-sizing: border-box;
@@ -7,6 +7,7 @@
 /*GENERAL*/
 
 body {
+    background-color: black;
     margin: 0px;
     color: white;
     font-size: 14px;
@@ -42,13 +43,16 @@ a {
     color: white;
     font-weight: 200;
 }
+img {
+    width: 100%;
+    height: auto;
+}
 
 /*PAGE*/
 
 .container {
     height: 100vh;
     width: auto;
-    /*background-image: url(./../images/big1.jpg);*/
     background-size: cover;
     background-repeat: no-repeat;
     background-color: black;
@@ -60,7 +64,7 @@ a {
     display: flex;
     /*background-color: rgba(35, 35, 39, 0.5);*/
     height: 90px;
-    padding: 20px;
+    padding: 20px 0px 20px 20px;
 }
 
 /*@media screen and (min-width: 600px) {
@@ -93,6 +97,9 @@ a {
     width: 1px;
     height: 20px;
     background-color: white;
+}
+.burger {
+    display: none;
 }
 
 /*a.no-border {
@@ -154,16 +161,42 @@ a {
 
 /*GALLERY*/
 
-.gallery {
+section {
+    /*border-bottom: 10px solid #000;*/
+    /*padding: 10px 0;*/
+    position: absolute;
+    left: 250px;
+    right: 50px;
+    /*max-width: 930px*/
+}
+section:last-of-type {
+    border-bottom: none;
+    padding-bottom: 30px;
+}
+.fancybox {
+    list-style: none;
+}
+.fancybox li {
+    display: inline-block;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+.fancybox img {
+    width: 300px;
+    height: 300px;
+}
+.fancybox ul {
+    align-content: center;
+}
+section img:hover {
+    border: 2px black solid;
+}
+
+/*.gallery {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    /*width: 75%;*/
-    /*background-color: rgba(0, 0, 0, 0.5);*/
-    /*padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;*/
     position: absolute;
     left: 300px;
     right: 100px;
@@ -174,23 +207,63 @@ a {
     margin: 5px;
     border: 1px solid #ccc;
     width: 30%;
-    /*width: 300px;*/
-    /*height: auto;*/
 }
 .gallery div.img:hover {
     border: 1px solid #777;
-}
+}*/
 
-@media screen and (max-width: 759px) {
-    .gallery {
+@media screen and (max-width: 1247px) {
+    section {
         position: absolute;
-        left: 20px;
-        right: 20px;
+        left: 100px;
+        right: 100px;
     }
 }
 
-@media screen and (max-width: 759px) {
-    .gallery div.img {
+/*@media screen and (max-width: 843px) {
+    .fancybox img {
         width: 100%;
+        height: auto;
+    }
+}*/
+
+
+/*
+@media screen and (max-width: 843px) {
+    section {
+        position: absolute;
+        align-self: center;
+    }
+}*/
+
+@media screen and (max-width: 863px) {
+    .fancybox li {
+        width: 100%;
+        height: auto;
+        min-width: 200px;
     }
 }
+@media screen and (max-width: 863px) {
+    .fancybox img {
+        width: 100%;
+        height: auto;
+    }
+    ul.fancybox {
+        padding-left: 0px;
+    }
+}
+@media screen and (max-width: 660px) {
+    .container {
+        min-height: 900px;
+    }
+    .main-nav {
+        display: none;
+    }
+    .burger {
+        width: 40px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        position: absolute;
+        right: 20px;
+        top: 25px;
